MAJOR ADD book-detail component #47

--- a/frontend/src/app/book/book-detail/book-detail.component.html
+++ b/frontend/src/app/book/book-detail/book-detail.component.html
@@ -64,8 +64,7 @@
             text="{{ 'button.update_book' | translate }}"
             [form]="formGroup"
             type="submit"
-            class="row"
-          >
+            class="row">
           </app-button>
         </form>
       </div>
