MAJOR ADD buscar component #55

--- a/frontend/src/app/buscar/buscar.component.html
+++ b/frontend/src/app/buscar/buscar.component.html
@@ -1,40 +1,47 @@
 <app-navbar></app-navbar>
 <div>
-    <div class="m-5">
-<h1>Buscando: <small>{{termino}}</small></h1>
-<hr>
-<div class="row animated fadeIn fast" *ngIf="booksList.length == 0">
-    <div class="col-md-12">
+  <div class="m-5">
+    <h1>
+      Buscando: <small>{{ termino }}</small>
+    </h1>
+    <hr />
+    <div class="row animated fadeIn fast" *ngIf="booksList.length == 0">
+      <div class="col-md-12">
         <div class="alert alert-info" role="alert">
-            No existen resultados con el término: {{termino}}
+          No existen resultados con el término: {{ termino }}
         </div>
-
+      </div>
     </div>
-</div>
-<div class="row row-cols-1 row-cols-md-3 g-4" *ngFor="let book of booksList">
-  <!-- <app-book-list [book]="variableLocal" [id] = "variableLocal.id" *ngFor="let variableLocal of booksList;"></app-book-list> -->
-  <!-- <h1>
+    <div
+      class="row row-cols-1 row-cols-md-3 g-4"
+      *ngFor="let book of booksList"
+    >
+      <!-- <app-book-list [book]="variableLocal" [id] = "variableLocal.id" *ngFor="let variableLocal of booksList;"></app-book-list> -->
+      <!-- <h1>
     {{book?.id}} - {{book?.name}}
   </h1> -->
-  <div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img [src]="'https://www.pngitem.com/pimgs/m/156-1562327_harry-potter-and-the-deathly-hallows-book-harry.png'" class="card-img-top" [alt]="book?.name" />
-          <div class="card-body">
-            <h5 class="card-title">{{ book?.name }}</h5>
-            <p class="card-text">{{ book?.type }}</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">{{ book?.description }}</small>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img
+                [src]="
+                  'https://www.pngitem.com/pimgs/m/156-1562327_harry-potter-and-the-deathly-hallows-book-harry.png'
+                "
+                class="card-img-top"
+                [alt]="book?.name"
+              />
+              <div class="card-body">
+                <h5 class="card-title">{{ book?.name }}</h5>
+                <p class="card-text">{{ book?.type }}</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">{{ book?.description }}</small>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </div>
-
-</div>
-</div>
-</div>
-
-
